plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'androidx.navigation.safeargs'
    id 'com.google.gms.google-services'
    id 'com.google.devtools.ksp'
    id 'kotlin-kapt'
}

def apikeyPropertiesFile = rootProject.file("apikey.properties")
def apikeyProperties = new Properties()
apikeyProperties.load(new FileInputStream(apikeyPropertiesFile))

android {
    namespace "com.apptimistiq.android.fitstreak"
    compileSdk 34

    buildFeatures {

        dataBinding =  true
        buildConfig = true // Enable custom BuildConfig fields

    }

    defaultConfig {
        applicationId "com.apptimistiq.android.fitstreak"
        minSdk 29
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        // should correspond to key/value pairs inside the file
        buildConfigField("String", "CONSUMER_KEY", apikeyProperties['CONSUMER_KEY'])
        buildConfigField("String", "SECRET", apikeyProperties['SECRET'])
    }

    buildTypes {
        release {
            minifyEnabled false
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
}

dependencies {

    //Navigation dependencies
    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.facebook.shimmer:shimmer:0.5.0'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'

    // Add in dependencies section
    implementation "androidx.core:core-splashscreen:1.0.1"

    // Import the BoM for the Firebase platform
    implementation(platform("com.google.firebase:firebase-bom:33.14.0"))

    // Declare the dependencies for the desired Firebase products
    // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
    implementation ("com.firebaseui:firebase-ui-auth:$firebase_ui_auth_version")

    // Declare the dependencies for the desired Firebase products
    // When using the BoM, you don't specify versions in Firebase library dependencies
    implementation("com.google.firebase:firebase-auth-ktx") // Added -ktx for Kotlin extensions
    implementation("com.google.firebase:firebase-analytics-ktx") // Added -ktx

    //Separately declaring google play service auth due to issues with target sdk 31 for default version
    implementation ("com.google.android.gms:play-services-auth:$google_services_auth_version")
    implementation ("com.google.android.gms:play-services-fitness:$google_services_fitness_version")

    //Constraint Layout
    implementation("androidx.constraintlayout:constraintlayout:$constraint_layout_version")

    //Viewmodel
    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")

    // Lifecycles only (without ViewModel or LiveData)
    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")


    //USe coroutines

    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2")

    //AndroidX activity and Fragment declarations
    implementation("androidx.activity:activity-ktx:$activity_version")
    implementation("androidx.fragment:fragment-ktx:$fragment_version")

    //Room dependencies
    implementation "androidx.room:room-runtime:$room_version"
    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.9'
    implementation 'androidx.navigation:navigation-ui-ktx:2.8.9'
    ksp "androidx.room:room-compiler:$room_version"

    // optional - Kotlin Extensions and Coroutines support for Room
    implementation "androidx.room:room-ktx:$room_version"



    // Testing Navigation
    androidTestImplementation("androidx.navigation:navigation-testing:$nav_version")

    implementation 'androidx.core:core-ktx:1.7.0'
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'com.google.android.material:material:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'


    //Adding JodaTime library as a dependency
    implementation 'joda-time:joda-time:2.10.14'

    //DataStore dependency
    implementation("androidx.datastore:datastore-preferences:1.0.0")

    //dependencies for Dagger implementation
    implementation "com.google.dagger:dagger:$dagger_version"
    ksp "com.google.dagger:dagger-compiler:$dagger_version"

    // Retrofit
    implementation "com.squareup.retrofit2:retrofit:2.9.0"


    // Moshi
    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'

    // Retrofit with Moshi Converter
    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'

    //Retrofit with ScalarConverter
    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'

    //Glide image loading library
    implementation 'com.github.bumptech.glide:glide:4.14.2'

}

kapt {
    correctErrorTypes = true
    useBuildCache = true
    javacOptions {
        // You already have these - make sure they're in your kapt block
        option("--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
        option("--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
        option("--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
        option("--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
        option("--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
        option("--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
        // Add these additional exports
        option("--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED")
        option("--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
        option("--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED")
    }
}

